--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '2'
 services:
     iibserver:
-        build: ./iib-10.0.0.8/
+        build: ./iib-10.0.0.8
         ports:
             - "4414"
             - "7800"
@@ -10,7 +10,4 @@ services:
         depends_on:
             - wmqserver
     wmqserver:
-        build: ./mq-9.0.3/
-         ports:
-            - "1414"
-            - "9443"
+        build: ./mq-9.0.3     
